# HarnessForge

./: .env.example  .gitignore  EXPERIMENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: blog_draft.md  index.html
docs/data/: calibration.json  native_baseline_v4_summary.json  tb_base_extra_summary.json  tb_baseline_summary.json  tb_finishfix_summary.json  tb_selfverify_extra_summary.json  tb_selfverify_summary.json
harness/: loop_policy.yaml  system_prompt.md  tool_descriptions.yaml
scripts/: make_figures.py  prepull_tb_images.py
scripts/figures/: __init__.py  common.py  data.py  experiments.py  results.py  systems.py
src/harnessforge/: config.py  replay.py  trace.py
tasks/t01_fix_off_by_one/: task.yaml
tasks/t02_implement_stack/: task.yaml
tasks/t03_fix_import_error/: task.yaml
tasks/t04_json_to_csv/: task.yaml
tasks/t05_fix_regex/: task.yaml
tasks/t06_organize_logs/: task.yaml
tasks/t07_edge_cases/: task.yaml
tasks/t08_multifile_bug/: task.yaml
tasks/t09_fix_infinite_loop/: task.yaml
tasks/t10_add_feature_from_spec/: task.yaml
tasks/t11_chained_bugs/: task.yaml
tasks/t12_trust_the_tests/: task.yaml
tasks/t13_make_it_fast/: task.yaml
tasks/t14_needle_in_haystack/: task.yaml
tasks/t15_shadowed_stdlib/: task.yaml
tests/: test_config.py  test_context.py  test_loop_e2e.py  test_memory.py  test_memory_e2e.py  test_persistence.py  test_proposal.py  test_search.py  test_select.py  test_stats.py  test_structured.py  test_task.py  test_tb_adapter.py  test_trace.py  test_validation.py
(+73 files in other folders)
