[project]
name = "harnessforge"
version = "0.1.0"
description = "Self-evolving coding-agent harness lab"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
